API for ad create, details, edit and delete added, replies list added, username fixed
